# mcpd-plugins-sdk-rust

./: .cargo-deny.toml  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  deny.toml  justfile
.github/workflows/: build.yaml  lint.yaml  release.yaml  security.yaml  test.yaml
examples/auth_plugin/: main.rs
examples/rate_limit_plugin/: main.rs
examples/simple_plugin/: main.rs
src/: constants.rs  error.rs  lib.rs  plugin.rs  server.rs
